2000-10-12 23:50 UTC-0400 David G. Holm <dholm@jsd-llc.com>
   * include/hbver.h
     % Bumped the revision code to "h" and the date to 2000-10-12
       for an interim build with the latest ADS and DBFCDX fixes.

2000-10-12 20:30 GMT +0200 JFL (mafact) <jfl@mafact.com>
     * source/rdd/dbfcdx/dbfcdx1.c
       * added casts, posted by John Skelton


2000-10-12 10:30 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * source/rdd/rddcpy.c
     * added casts, posted by John Skelton
   * contrib/rdd_ads/ads1.c
     * minor bug fixed in adsSeek()

2000-10-11 3:58 UTC+0800 Brian Hays <bhays@abacuslaw.com>
   Re-posting changes that had a CVS error yesterday...
   * contrib/rdd_ads/ads1.c
      * fixed gpf when getting values at Eof
      * Fixed Bof problem in child areas.

        Alexander: I had to remove the recently added adsBof()
        because we have repositioned to record 1 when at Bof,
        so ADS no longer thinks it's Bof.  The adsEof does fix
        the other problem, though.  All my tests pass now,
        so I think we're finally done with Bof issues ;-)

2000-10-11 13:40 GMT -0300 Horacio D. Roldan <horacioroldan@usa.net>
   * source/rdd/dbfcdx/dbfcdx1.c
     Fixed a bug in ordCreate that corrupted the dbf

2000-10-10 21:15 GMT -3 Luiz Rafael Culik <culik@sl.conex.net>
   *source/rtl/dummy.prg
      Removed __DBAPP() function

2000-10-10 16:35 UTC-0400 David G. Holm <dholm@jsd-llc.com>
   * include/hbver.h
     % Bumped the revision code to "g" and the date to 2000-10-10
       for an interim build with the latest ADS RDD enhancements.

2000-10-10 16:30 UTC-0400 David G. Holm <dholm@jsd-llc.com>
   * include/hberrors.h
   * source/compiler/hbgenerr.c
   * source/pp/pplib.c
   * source/util/hbpp/hbpp.c
     % Changed the two char * parameters for hb_compGenError()
       and hb_compGenWarning() to const char *.
   * source/pp/ppcore.c
     % Removed the artificial nested include file limit test and