@@ -1,3 +1,9 @@
+2000-10-13 11:28 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
+     * source/rdd/dbfcdx/dbfcdx1.c
+     * source/rdd/dbcmd.c
+     * source/include/hbrddcdx.h
+       * fixed some warnings, added HB_TRACE_...
+
 2000-10-12 23:50 UTC-0400 David G. Holm <dholm@jsd-llc.com>
    * include/hbver.h
      % Bumped the revision code to "h" and the date to 2000-10-12
